<resources>
    <string name="app_name">My Warranty Mobile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_active">Active</string>
    <string name="title_expired">Expired</string>
    <string name="title_all">All</string>
    <string name="description_logo">Application Logo</string>
    <string name="msg_warranty_not_found">No warranties found.</string>
    <string name="title_activity_warranty_edit">Warranty</string>
    <string name="product_name">Product name</string>
    <string name="product_photo">Product photo</string>
    <string name="acquisition_date">Acquisition date</string>
    <string name="expire_date">Expire date</string>
    <string name="invoice_photo">Invoice photo</string>
    <string name="msg_warranty_created">Warranty created with success</string>
    <string name="warranty_days_format">%s days remaining</string>
</resources>
