<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_warranty_edit"
        tools:context=".view.scenes.WarrantyEditActivity"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="15dp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/productName"
            android:hint="@string/product_name"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_photo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_gravity="center" />

        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_add_a_photo_blue_24dp"
                android:id="@+id/productPhotoButton"
                android:maxWidth="64dp"
                android:maxHeight="64dp"
                android:scaleType="fitCenter"
        />

    </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/acquisitionDate"
            android:hint="@string/acquisition_date"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/expireDate"
            android:hint="@string/expire_date"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_photo"
                android:layout_gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_add_a_photo_blue_24dp"
                android:id="@+id/invoicePhotoButton"
                android:maxWidth="64dp"
                android:maxHeight="64dp"
                android:scaleType="fitCenter"
        />

    </LinearLayout>
    <Button
            android:text="Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button.Colored"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/productPhoto"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/invoicePhoto"
    />
</LinearLayout>